# ml-scratch

./: README.md  pyproject.toml
dl/activations/: activations.py
dl/layers/: attention.py  batchnorm.py  conv2d.py  dropout.py  embedding.py  linear.py  pooling.py  rnn.py
dl/losses/: losses.py
dl/models/: diffusion.py  gan.py  sequential.py  vae.py
dl/nlp/: word2vec.py
dl/optimizers/: optimizers.py
docs/: README.md  dl.md  llm.md  ml.md  papers.md  rl.md
docs/dl/: 01-fundamentals.md  02-optimization.md  03-cnn.md  04-rnn.md  05-attention-transformer.md
docs/ml/: 01-linear-models.md  02-tree-and-ensemble.md  03-svm-knn-nb.md  04-unsupervised.md
docs/rl/: 01-fundamentals.md  02-dp-td.md  03-deep-rl.md
examples/dl/: example_dl.py
examples/llm/: example_llm.py
examples/ml/: example_ml.py
examples/rl/: example_rl.py
llm/: generate.py  train.py
llm/model/: gpt.py  positional.py
llm/tokenizer/: bpe.py
ml/clustering/: dbscan.py  kmeans.py
ml/dimensionality_reduction/: pca.py  tsne.py
ml/ensemble/: gradient_boosting.py  random_forest.py
ml/linear_models/: lasso.py  linear_regression.py  logistic_regression.py  ridge.py
ml/mixture/: gmm.py
ml/naive_bayes/: gaussian_nb.py
ml/neighbors/: knn.py
ml/svm/: svm.py
ml/tree/: decision_tree.py
rl/bandits/: bandit.py
rl/dqn/: dqn.py
rl/dynamic_programming/: dp.py
rl/mcts/: mcts.py
rl/policy_gradient/: ppo.py  reinforce.py
rl/td_learning/: td.py
tests/: test_dl.py  test_llm.py  test_ml.py  test_new.py  test_rl.py
utils/: data.py  metrics.py
