[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-scratch"
version = "0.1.0"
description = "ML/DL/RL algorithms implemented from scratch with NumPy"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
