[project]
name = "ml-scratch"
version = "0.1.0"
description = "ML/DL/RL algorithms implemented from scratch with NumPy"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
